--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
             <div>
               <img src="images/mail.png" alt="" />
               <p>
-                kheng yuan was here
+                demo@gmail.com
               </p>
             </div>
           </div>
